Loads ontology properly

--- a/OntoViewer/src/onto_app/Untitled.ipynb
+++ b/OntoViewer/src/onto_app/Untitled.ipynb
@@ -13,38 +13,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[(1, 1, 'https://serc.iiit.ac.in/downloads/ontology/pizza.owl#Pizza'),\n",
-       " (2, 1, 'https://serc.iiit.ac.in/downloads/ontology/pizza.owl#Peri-Peri'),\n",
-       " (3, 1, 'https://serc.iiit.ac.in/downloads/ontology/pizza.owl#TandooriPizza'),\n",
-       " (4, 1, 'https://serc.iiit.ac.in/downloads/ontology/pizza.owl#IndianPizza'),\n",
-       " (5, 1, \"https://serc.iiit.ac.in/downloads/ontology/pizza.owl#Domino'SPizza\"),\n",
-       " (6, 1, 'https://serc.iiit.ac.in/downloads/ontology/pizza.owl#Pizza'),\n",
-       " (7, 1, 'https://serc.iiit.ac.in/downloads/ontology/pizza.owl#Pizza'),\n",
-       " (8, 1, 'https://serc.iiit.ac.in/downloads/ontology/pizza.owl#Marinara'),\n",
-       " (9, 2, 'https://serc.iiit.ac.in/downloads/ontology/securityontology.owl#Authentication'),\n",
-       " (10, 2, 'https://serc.iiit.ac.in/downloads/ontology/securityontology.owl#Authorization'),\n",
-       " (11, 2, 'https://serc.iiit.ac.in/downloads/ontology/securityontology.owl#Firewall'),\n",
-       " (12, 2, 'https://serc.iiit.ac.in/downloads/ontology/securityontology.owl#NetworkSecurity'),\n",
-       " (13, 2, 'https://serc.iiit.ac.in/downloads/ontology/securityontology.owl#Trojan'),\n",
-       " (14, 2, 'https://serc.iiit.ac.in/downloads/ontology/securityontology.owl#Virus'),\n",
-       " (15, 2, 'https://serc.iiit.ac.in/downloads/ontology/securityontology.owl#SecurityTeams'),\n",
-       " (16, 2, 'https://serc.iiit.ac.in/downloads/ontology/securityontology.owl#PhysicalSecurity')]"
+       "[(1, 'hypernym', 'https://serc.iiit.ac.in/downloads/ontology/pizza.owl#TandooriPizza', 'https://serc.iiit.ac.in/downloads/ontology/pizza.owl#IndianPizza', 1),\n",
+       " (2, 'concept', \"https://serc.iiit.ac.in/downloads/ontology/pizza.owl#Domino'SPizza\", 'https://serc.iiit.ac.in/downloads/ontology/pizza.owl#Pizza', 1),\n",
+       " (3, 'isToppingOf', 'https://serc.iiit.ac.in/downloads/ontology/pizza.owl#Pizza', 'https://serc.iiit.ac.in/downloads/ontology/pizza.owl#Marinara', 1),\n",
+       " (4, 'hyponym', 'https://serc.iiit.ac.in/downloads/ontology/pizza.owl#Pizza', 'https://serc.iiit.ac.in/downloads/ontology/pizza.owl#Peri-Peri', 1),\n",
+       " (5, 'hypernym', 'https://serc.iiit.ac.in/downloads/ontology/securityontology.owl#Authentication', 'https://serc.iiit.ac.in/downloads/ontology/securityontology.owl#Authorization', 2),\n",
+       " (6, 'hypernym', 'https://serc.iiit.ac.in/downloads/ontology/securityontology.owl#Firewall', 'https://serc.iiit.ac.in/downloads/ontology/securityontology.owl#NetworkSecurity', 2),\n",
+       " (7, 'hyponym', 'https://serc.iiit.ac.in/downloads/ontology/securityontology.owl#Trojan', 'https://serc.iiit.ac.in/downloads/ontology/securityontology.owl#Virus', 2),\n",
+       " (8, 'hyponym', 'https://serc.iiit.ac.in/downloads/ontology/securityontology.owl#SecurityTeams', 'https://serc.iiit.ac.in/downloads/ontology/securityontology.owl#PhysicalSecurity', 2)]"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "c = engine.connect()\n",
-    "results = c.execute(\"\"\"SELECT * FROM nodes\"\"\")\n",
+    "results = c.execute(\"\"\"SELECT * FROM class_relations\"\"\")\n",
     "results.fetchall()"
    ]
   },
