Fixes accept/reject update to DB

--- a/OntoViewer/src/onto_app/Untitled.ipynb
+++ b/OntoViewer/src/onto_app/Untitled.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,23 +13,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[(1, 'hypernym', 'https://serc.iiit.ac.in/downloads/ontology/pizza.owl#TandooriPizza', 'https://serc.iiit.ac.in/downloads/ontology/pizza.owl#IndianPizza', 1),\n",
-       " (2, 'concept', \"https://serc.iiit.ac.in/downloads/ontology/pizza.owl#Domino'SPizza\", 'https://serc.iiit.ac.in/downloads/ontology/pizza.owl#Pizza', 1),\n",
-       " (3, 'isToppingOf', 'https://serc.iiit.ac.in/downloads/ontology/pizza.owl#Pizza', 'https://serc.iiit.ac.in/downloads/ontology/pizza.owl#Marinara', 1),\n",
-       " (4, 'hyponym', 'https://serc.iiit.ac.in/downloads/ontology/pizza.owl#Pizza', 'https://serc.iiit.ac.in/downloads/ontology/pizza.owl#Peri-Peri', 1),\n",
+       "[(1, 'concept', \"https://serc.iiit.ac.in/downloads/ontology/pizza.owl#Domino'SPizza\", 'https://serc.iiit.ac.in/downloads/ontology/pizza.owl#Pizza', 1),\n",
+       " (2, 'isToppingOf', 'https://serc.iiit.ac.in/downloads/ontology/pizza.owl#Pizza', 'https://serc.iiit.ac.in/downloads/ontology/pizza.owl#Marinara', 1),\n",
+       " (3, 'hyponym', 'https://serc.iiit.ac.in/downloads/ontology/pizza.owl#Pizza', 'https://serc.iiit.ac.in/downloads/ontology/pizza.owl#Peri-Peri', 1),\n",
+       " (4, 'hypernym', 'https://serc.iiit.ac.in/downloads/ontology/pizza.owl#TandooriPizza', 'https://serc.iiit.ac.in/downloads/ontology/pizza.owl#IndianPizza', 1),\n",
        " (5, 'hypernym', 'https://serc.iiit.ac.in/downloads/ontology/securityontology.owl#Authentication', 'https://serc.iiit.ac.in/downloads/ontology/securityontology.owl#Authorization', 2),\n",
-       " (6, 'hypernym', 'https://serc.iiit.ac.in/downloads/ontology/securityontology.owl#Firewall', 'https://serc.iiit.ac.in/downloads/ontology/securityontology.owl#NetworkSecurity', 2),\n",
-       " (7, 'hyponym', 'https://serc.iiit.ac.in/downloads/ontology/securityontology.owl#Trojan', 'https://serc.iiit.ac.in/downloads/ontology/securityontology.owl#Virus', 2),\n",
+       " (6, 'hyponym', 'https://serc.iiit.ac.in/downloads/ontology/securityontology.owl#Trojan', 'https://serc.iiit.ac.in/downloads/ontology/securityontology.owl#Virus', 2),\n",
+       " (7, 'hypernym', 'https://serc.iiit.ac.in/downloads/ontology/securityontology.owl#Firewall', 'https://serc.iiit.ac.in/downloads/ontology/securityontology.owl#NetworkSecurity', 2),\n",
        " (8, 'hyponym', 'https://serc.iiit.ac.in/downloads/ontology/securityontology.owl#SecurityTeams', 'https://serc.iiit.ac.in/downloads/ontology/securityontology.owl#PhysicalSecurity', 2)]"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
