Pushing final version of ontoevaluator, admin view fully done

--- a/OntoViewer/src/onto_app/Untitled.ipynb
+++ b/OntoViewer/src/onto_app/Untitled.ipynb
@@ -429,29 +429,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['SPACE', 'ADJ', 'NOUN', 'NOUN', 'CCONJ', 'NOUN', 'ADP', 'ADJ', 'NOUN']"
+       "['/Users/vivek/SIREN-Research/Research-Work/OntoViewer/src/onto_app/data/input/ontologies/pizza.owl',\n",
+       " '/Users/vivek/SIREN-Research/Research-Work/OntoViewer/src/onto_app/data/input/ontologies/security.owl']"
       ]
      },
-     "execution_count": 175,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "import spacy\n",
-    "def split_by_camel_case(identifier):\n",
-    "    # Split string by camel-case\n",
-    "    matches = finditer('.+?(?:(?<=[a-z])(?=[A-Z])|(?<=[A-Z])(?=[A-Z][a-z])|$)', identifier)\n",
-    "    return \" \".join([m.group(0) for m in matches])\n",
-    "nlp = spacy.load(\"en_core_web_sm\")\n",
-    "prop = \" \".join([split_by_camel_case(elem) for elem in \"A.15.1.4 Data protection and privacy of personal information\".split(\"_\")]).lower()\n",
-    "[tok.pos_ for tok in nlp(prop)]"
+    "import os\n",
+    "import glob\n",
+    "[os.path.abspath(f) for f in glob.glob(\"./data/input/ontologies/*\") if isfile(f) and f.endswith(\".owl\")]"
    ]
   },
   {
