--- a/OntoViewer/src/onto_app/Untitled.ipynb
+++ b/OntoViewer/src/onto_app/Untitled.ipynb
@@ -409,65 +409,282 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "2"
-      ]
-     },
-     "execution_count": 125,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-0.005545307882130146\n",
+      "0.025124356150627136\n",
+      "0.017693020403385162\n",
+      "-0.009036985225975513\n",
+      "-0.010162311606109142\n"
+     ]
     }
    ],
    "source": [
-    "np.argmax((1,2,3))"
+    "#F3\n",
+    "import tensorflow_hub as hub\n",
+    "from scipy import spatial\n",
+    "# USE_link = \"https://tfhub.dev/google/universal-sentence-encoder-large/5?tf-hub-format=compressed\"\n",
+    "# model = hub.load(USE_link)\n",
+    "\n",
+    "def extractUSEEmbeddings(words):\n",
+    "    word_embeddings = model(words)\n",
+    "    return word_embeddings.numpy()\n",
+    "\n",
+    "def cos_sim(a,b):\n",
+    "    # Returns cosine similarity of two vectors\n",
+    "    return 1 - spatial.distance.cosine(a, b)\n",
+    "\n",
+    "def generateScore(text_array):\n",
+    "    all_embs = extractUSEEmbeddings(text_array + [\"Pizza\"])\n",
+    "    return [cos_sim(tweet_emb, all_embs[-1]) for tweet_emb in all_embs[:-1]]\n",
+    "print (cos_sim(*extractUSEEmbeddings([\"Season's eatings! Driving around to look at holiday lights? Drive up to one of our pizzerias for curbside pick-up and chow down on your favorite deep dish from Lou's SnowmanSnowflake\", \"Information Security\"])))\n",
+    "print (cos_sim(*extractUSEEmbeddings([\"Football Sunday calls for deep dish! American football. No matter who you're rooting for, deep dish is something we call can agree on! Slice of pizza\", \"Information Security\"])))\n",
+    "print (cos_sim(*extractUSEEmbeddings([\"Today's the perfect day to get your craft on and build a gingerbread house! Check out this gingerbread Lou Malnati's made by our friend @carlybreakstone96. Craving Lou's too? Order some deep dish and eat while you build!\", \"Information Security\"])))\n",
+    "print (cos_sim(*extractUSEEmbeddings([\"Psst... Christmas is in 1 week. Still shopping for people on your list? Spread some hoLOUday cheer with a cheesy stocking stuffer! Give the gift of a Lou's gift card this holiday season & get a FREE bonus certificate, (you've earned it).\", \"Information Security\"])))\n",
+    "print (cos_sim(*extractUSEEmbeddings([\"LAST CHANCE to ship deep dish for standard delivery before Christmas!Place your Tastes of Chicago order by TOMORROW, Friday, December 18th for standard delivery before Christmas with no extra shipping fees.\", \"Information Security\"])))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "['/Users/vivek/SIREN-Research/Research-Work/OntoViewer/src/onto_app/data/input/ontologies/pizza.owl',\n",
-       " '/Users/vivek/SIREN-Research/Research-Work/OntoViewer/src/onto_app/data/input/ontologies/security.owl']"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.009363527409732342\n",
+      "-0.0381292924284935\n",
+      "-0.0821034163236618\n",
+      "0.020301612094044685\n",
+      "-0.070344477891922\n"
+     ]
     }
    ],
    "source": [
-    "import os\n",
-    "import glob\n",
-    "[os.path.abspath(f) for f in glob.glob(\"./data/input/ontologies/*\") if isfile(f) and f.endswith(\".owl\")]"
+    "#F3\n",
+    "import tensorflow_hub as hub\n",
+    "from scipy import spatial\n",
+    "# USE_link = \"https://tfhub.dev/google/universal-sentence-encoder-large/5?tf-hub-format=compressed\"\n",
+    "# model = hub.load(USE_link)\n",
+    "\n",
+    "def extractUSEEmbeddings(words):\n",
+    "    word_embeddings = model(words)\n",
+    "    return word_embeddings.numpy()\n",
+    "\n",
+    "def cos_sim(a,b):\n",
+    "    # Returns cosine similarity of two vectors\n",
+    "    return 1 - spatial.distance.cosine(a, b)\n",
+    "\n",
+    "def generateScore(text_array):\n",
+    "    all_embs = extractUSEEmbeddings(text_array + [\"Pizza\"])\n",
+    "    return [cos_sim(tweet_emb, all_embs[-1]) for tweet_emb in all_embs[:-1]]\n",
+    "print (cos_sim(*extractUSEEmbeddings([\"When it’s the #FirstDayOfWinter and you wanna warm up with as many pizza nights as possible. How many times would you press this button? #JetsPizza\", \"Information Security\"])))\n",
+    "print (cos_sim(*extractUSEEmbeddings([\"There are five differences between these two pics. Go ahead, try and spot ‘em.\", \"Information Security\"])))\n",
+    "print (cos_sim(*extractUSEEmbeddings([\"A perfect Saturday night looks like this. #JetsPizza\", \"Information Security\"])))\n",
+    "print (cos_sim(*extractUSEEmbeddings([\"When you realize grilled cheese is out and Jet’s Bread is IN. Pair your tomato soup with Jet’s Bread. #JetsPizza \", \"Information Security\"])))\n",
+    "print (cos_sim(*extractUSEEmbeddings([\"What would you pair with your Detroit-Style pizza?\", \"Information Security\"])))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.09831051528453827\n",
+      "-0.027837885543704033\n",
+      "0.03359723091125488\n",
+      "-0.007910827174782753\n",
+      "-0.04666958749294281\n"
+     ]
+    }
+   ],
+   "source": [
+    "#F3\n",
+    "import tensorflow_hub as hub\n",
+    "from scipy import spatial\n",
+    "# USE_link = \"https://tfhub.dev/google/universal-sentence-encoder-large/5?tf-hub-format=compressed\"\n",
+    "# model = hub.load(USE_link)\n",
+    "\n",
+    "def extractUSEEmbeddings(words):\n",
+    "    word_embeddings = model(words)\n",
+    "    return word_embeddings.numpy()\n",
+    "\n",
+    "def cos_sim(a,b):\n",
+    "    # Returns cosine similarity of two vectors\n",
+    "    return 1 - spatial.distance.cosine(a, b)\n",
+    "\n",
+    "def generateScore(text_array):\n",
+    "    all_embs = extractUSEEmbeddings(text_array + [\"Pizza\"])\n",
+    "    return [cos_sim(tweet_emb, all_embs[-1]) for tweet_emb in all_embs[:-1]]\n",
+    "print (cos_sim(*extractUSEEmbeddings([\"Game recognize game.\", \"Information Security\"])))\n",
+    "print (cos_sim(*extractUSEEmbeddings([\"What a busy few hours for Santa and Mrs. Claus. Now time to get back to wrapping gifts. Thank you to the managers of Santa's schedule!\", \"Information Security\"])))\n",
+    "print (cos_sim(*extractUSEEmbeddings([\"Rehaj, 6, from Moose Jaw, SK. asked: Why does Santa always wear red, and can you come more than once a year?\", \"Information Security\"])))\n",
+    "print (cos_sim(*extractUSEEmbeddings([\"Bryson & Easton, 7&4, from Thunder Bay, ON. asked: Does Mrs. Claus help with planning? And why is Rudolph's nose red?\", \"Information Security\"])))\n",
+    "print (cos_sim(*extractUSEEmbeddings([\"Roman, 6, from Barrie, ON. asked a great one: Are the Santa's at the mall you, or are they helpers dressed like you?\", \"Information Security\"])))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 0\n",
+      "0 0 3\n",
+      "0 2 0 2\n",
+      "Ans, 12\n",
+      "0 1\n",
+      "0 1 3\n",
+      "4\n",
+      "0 2 2 3\n",
+      "Ans, 9\n",
+      "0 2\n",
+      "0 2 3\n",
+      "4\n",
+      "0 2 0 1\n",
+      "Ans, 5\n",
+      "1 0\n",
+      "1 0 3\n",
+      "2\n",
+      "2 3 0 2\n",
+      "Ans, 15\n",
+      "1 1\n",
+      "1 1 3\n",
+      "2\n",
+      "2 3 0 3\n",
+      "Ans, 24\n",
+      "1 2\n",
+      "1 2 3\n",
+      "2\n",
+      "2 3 1 3\n",
+      "Ans, 17\n",
+      "2 0\n",
+      "2 0 3\n",
+      "2\n",
+      "0 1 0 2\n",
+      "Ans, 3\n",
+      "2 1\n",
+      "2 1 3\n",
+      "2\n",
+      "0 1 0 3\n",
+      "Ans, 6\n",
+      "2 2\n",
+      "2 2 3\n",
+      "2\n",
+      "0 1 1 3\n",
+      "Ans, 5\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "'asset owned by organization'"
+       "[[12, 21, 16], [27, 45, 33], [24, 39, 28]]"
       ]
      },
-     "execution_count": 171,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "prop"
+    "import numpy as np\n",
+    "\n",
+    "class Solution:\n",
+    "    \n",
+    "    def sum_mat(self, mat, indices):\n",
+    "        final_indices = []\n",
+    "        for i,index in enumerate(indices):\n",
+    "            if index < 0:\n",
+    "                index = 0\n",
+    "            if i == 0 and index >= self.m:\n",
+    "                return 0\n",
+    "            if i == 1 and index <= 0:\n",
+    "                return 0\n",
+    "            if i == 2 and index >= self.n:\n",
+    "                return 0\n",
+    "            if i == 3 and index <= 0:\n",
+    "                return 0\n",
+    "            \n",
+    "            if i>=2 and index >= self.n:\n",
+    "                index = self.n if i%2 == 1 else (self.n - 1) \n",
+    "            elif i<2 and index >= self.m:\n",
+    "                index = self.m if i%2 == 1 else (self.m - 1) \n",
+    "            final_indices.append(index)\n",
+    "        a,b,c,d = final_indices\n",
+    "        print (a,b,c,d)\n",
+    "        ans = np.sum(mat[a:b, c:d])\n",
+    "        print (\"Ans,\", ans)\n",
+    "        return ans\n",
+    "        \n",
+    "    def calculate_ans(self, mat, i, j):\n",
+    "        if self.memo[i][j]!=0:\n",
+    "            return self.memo[i][j]\n",
+    "        print (i,j, self.m)\n",
+    "        if (i+1) < self.m and self.memo[i+1][j]!=0:\n",
+    "            print(1)\n",
+    "            return self.memo[i+1][j] + self.sum_mat(mat, [i-self.k, i-self.k+1, j-self.k, j+self.k+1]) - self.sum_mat(mat, [i+self.k+1, i+self.k+2, j-self.k, j+self.k+1])\n",
+    "        \n",
+    "        elif (i-1) >= 0 and self.memo[i-1][j]!=0:\n",
+    "            print(2)\n",
+    "            return self.memo[i-1][j] + self.sum_mat(mat, [i+self.k, i+self.k+1, j-self.k, j+self.k+1]) - self.sum_mat(mat, [i-self.k-1, i-self.k, j-self.k, j+self.k+1])\n",
+    "        \n",
+    "        elif (j+1) < self.n and self.memo[i][j+1] != 0:\n",
+    "            print(3)\n",
+    "            return self.memo[i][j+1] + self.sum_mat(mat, [i-self.k, i+self.k+1, j-self.k, j-self.k+1]) - self.sum_mat(mat, [i-self.k, i+self.k+1, j+self.k+1, j+self.k+2])\n",
+    "        \n",
+    "        elif (j-1) >= 0 and self.memo[i][j-1]!=0:\n",
+    "            print(4)\n",
+    "            return self.memo[i][j-1] - self.sum_mat(mat, [i-self.k, i+self.k+1, j-self.k-1, j-self.k]) + self.sum_mat(mat, [i-self.k, i+self.k+1, j+self.k, j+self.k+1])\n",
+    "        \n",
+    "        \n",
+    "        return self.sum_mat(mat, [i-self.k, i+self.k+1, j-self.k, j+self.k+1])\n",
+    "        \n",
+    "    def matrixBlockSum(self, mat, K):\n",
+    "        self.m, self.n = np.array(mat).shape\n",
+    "        self.k = K\n",
+    "        self.memo = [[0 for i in range(self.n)] for j in range(self.m)]\n",
+    "        for i in range(self.m):\n",
+    "            for j in range(self.n):\n",
+    "                print (i,j)\n",
+    "                self.memo[i][j] = self.calculate_ans(np.array(mat), i, j)\n",
+    "        return self.memo\n",
+    "    \n",
+    "s = Solution()\n",
+    "s.matrixBlockSum([[1,2,3],[4,5,6],[7,8,9]], 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = [1,2,3]\n",
+    "a[:0]"
    ]
   },
   {
