--- a/OntoViewer/src/onto_app/Untitled.ipynb
+++ b/OntoViewer/src/onto_app/Untitled.ipynb
@@ -672,9 +672,56 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 Counter({'d': 1}) Counter({'y': 4, 'a': 2, 'b': 2, 'q': 2, 'u': 1, 'z': 1, 'k': 1, 'c': 1, 's': 1, 'p': 1})\n",
+      "1 17\n",
+      "2 Counter({'d': 1}) Counter({'y': 3, 'a': 2, 'b': 2, 'q': 2, 'u': 1, 'z': 1, 'k': 1, 'c': 1, 's': 1, 'p': 1})\n",
+      "2 16\n",
+      "3 Counter({'d': 1}) Counter({'y': 2, 'a': 2, 'b': 2, 'q': 2, 'u': 1, 'z': 1, 'k': 1, 'c': 1, 's': 1, 'p': 1})\n",
+      "3 15\n",
+      "4 Counter({'d': 1}) Counter({'a': 2, 'b': 2, 'q': 2, 'y': 1, 'u': 1, 'z': 1, 'k': 1, 'c': 1, 's': 1, 'p': 1})\n",
+      "4 14\n",
+      "5 Counter({'d': 1}) Counter({'a': 2, 'b': 2, 'q': 2, 'u': 1, 'z': 1, 'k': 1, 'c': 1, 's': 1, 'p': 1})\n",
+      "5 13\n",
+      "6 Counter({'d': 1}) Counter({'a': 2, 'b': 2, 'q': 2, 'z': 1, 'k': 1, 'c': 1, 's': 1, 'p': 1})\n",
+      "6 12\n",
+      "7 Counter({'d': 1, 'u': 1}) Counter({'a': 2, 'b': 2, 'q': 2, 'z': 1, 'k': 1, 'c': 1, 's': 1, 'p': 1})\n",
+      "8 Counter({'d': 1, 'y': 1, 'u': 1}) Counter({'a': 2, 'b': 2, 'q': 2, 'z': 1, 'k': 1, 'c': 1, 's': 1, 'p': 1})\n",
+      "9 Counter({'y': 2, 'd': 1, 'u': 1}) Counter({'a': 2, 'b': 2, 'q': 2, 'z': 1, 'k': 1, 'c': 1, 's': 1, 'p': 1})\n",
+      "10 Counter({'y': 2, 'd': 1, 'u': 1}) Counter({'b': 2, 'q': 2, 'a': 1, 'z': 1, 'k': 1, 'c': 1, 's': 1, 'p': 1})\n",
+      "11 Counter({'y': 2, 'd': 1, 'u': 1}) Counter({'b': 2, 'q': 2, 'z': 1, 'k': 1, 'c': 1, 's': 1, 'p': 1})\n",
+      "12 Counter({'y': 2, 'd': 1, 'u': 1}) Counter({'q': 2, 'b': 1, 'z': 1, 'k': 1, 'c': 1, 's': 1, 'p': 1})\n",
+      "13 Counter({'y': 2, 'd': 1, 'u': 1}) Counter({'q': 2, 'z': 1, 'k': 1, 'c': 1, 's': 1, 'p': 1})\n",
+      "13 11\n",
+      "14 Counter({'y': 2, 'd': 1, 'u': 1}) Counter({'q': 2, 'k': 1, 'c': 1, 's': 1, 'p': 1})\n",
+      "14 10\n",
+      "15 Counter({'y': 2, 'd': 1, 'u': 1, 'z': 1}) Counter({'q': 2, 'k': 1, 'c': 1, 's': 1, 'p': 1})\n",
+      "16 Counter({'y': 2, 'd': 1, 'u': 1, 'z': 1}) Counter({'q': 2, 'c': 1, 's': 1, 'p': 1})\n",
+      "17 Counter({'y': 2, 'd': 1, 'u': 1, 'z': 1, 'k': 1}) Counter({'q': 2, 'c': 1, 's': 1, 'p': 1})\n",
+      "18 Counter({'y': 2, 'd': 1, 'u': 1, 'z': 1, 'k': 1}) Counter({'q': 1, 'c': 1, 's': 1, 'p': 1})\n",
+      "19 Counter({'y': 2, 'd': 1, 'u': 1, 'z': 1, 'k': 1}) Counter({'c': 1, 's': 1, 'p': 1})\n",
+      "19 9\n",
+      "20 Counter({'y': 2, 'd': 1, 'u': 1, 'a': 1, 'z': 1, 'k': 1}) Counter({'c': 1, 's': 1, 'p': 1})\n",
+      "21 Counter({'y': 2, 'a': 2, 'd': 1, 'u': 1, 'z': 1, 'k': 1}) Counter({'c': 1, 's': 1, 'p': 1})\n",
+      "22 Counter({'y': 3, 'a': 2, 'd': 1, 'u': 1, 'z': 1, 'k': 1}) Counter({'c': 1, 's': 1, 'p': 1})\n",
+      "23 Counter({'y': 4, 'a': 2, 'd': 1, 'u': 1, 'z': 1, 'k': 1}) Counter({'c': 1, 's': 1, 'p': 1})\n",
+      "24 Counter({'y': 4, 'a': 2, 'd': 1, 'u': 1, 'b': 1, 'z': 1, 'k': 1}) Counter({'c': 1, 's': 1, 'p': 1})\n",
+      "25 Counter({'y': 4, 'a': 2, 'b': 2, 'd': 1, 'u': 1, 'z': 1, 'k': 1}) Counter({'c': 1, 's': 1, 'p': 1})\n",
+      "26 Counter({'y': 4, 'a': 2, 'b': 2, 'd': 1, 'u': 1, 'z': 1, 'k': 1}) Counter({'s': 1, 'p': 1})\n",
+      "27 Counter({'y': 4, 'a': 2, 'b': 2, 'd': 1, 'u': 1, 'z': 1, 'k': 1, 'c': 1}) Counter({'s': 1, 'p': 1})\n",
+      "28 Counter({'y': 4, 'a': 2, 'b': 2, 'd': 1, 'u': 1, 'z': 1, 'k': 1, 'c': 1}) Counter({'p': 1})\n",
+      "29 Counter({'y': 4, 'a': 2, 'b': 2, 'd': 1, 'u': 1, 'z': 1, 'k': 1, 'c': 1, 's': 1}) Counter({'p': 1})\n",
+      "30 Counter({'y': 4, 'a': 2, 'b': 2, 'd': 1, 'u': 1, 'z': 1, 'k': 1, 'c': 1, 's': 1}) Counter()\n",
+      "31 Counter({'y': 4, 'a': 2, 'b': 2, 'd': 1, 'u': 1, 'z': 1, 'k': 1, 'c': 1, 's': 1, 'p': 1}) Counter()\n",
+      "32 Counter({'y': 4, 'a': 2, 'b': 2, 'd': 1, 'u': 1, 'z': 1, 'k': 1, 'q': 1, 'c': 1, 's': 1, 'p': 1}) Counter()\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "[]"
+       "9"
       ]
      },
      "execution_count": 19,
@@ -683,8 +730,243 @@
     }
    ],
    "source": [
-    "a = [1,2,3]\n",
-    "a[:0]"
+    "from collections import Counter\n",
+    "class Solution:\n",
+    "    def is_palindrome(self, s):\n",
+    "        return s == s[::-1]\n",
+    "    def minInsertions(self, s: str) -> int:\n",
+    "        self.string = s\n",
+    "        if self.is_palindrome(s):\n",
+    "            return 0\n",
+    "        pre_set = Counter(s[0])\n",
+    "        post_set = Counter(s[1:])\n",
+    "        diff1 = sum((pre_set - post_set).values())\n",
+    "        diff2 = sum((post_set - pre_set).values())\n",
+    "        min_cost = 10000\n",
+    "        for pivot in range(1, 2*len(s)-1):\n",
+    "            print (pivot, pre_set-post_set, post_set-pre_set)\n",
+    "            if (diff1 + diff2) < min_cost:\n",
+    "                print (pivot, diff1+diff2)\n",
+    "                min_cost = (diff1 + diff2)\n",
+    "            if pivot%2==1:\n",
+    "                post_set[s[int((pivot+1)/2)]]-=1\n",
+    "                post_set = Counter({el: post_set[el] for el in post_set if post_set[el]>0})\n",
+    "                diff1 = sum((pre_set - post_set).values())\n",
+    "                diff2 = sum((post_set - pre_set).values())\n",
+    "            else:\n",
+    "                pre_set[s[int((pivot)/2)]]+=1\n",
+    "                diff1 = sum((pre_set - post_set).values())\n",
+    "                diff2 = sum((post_set - pre_set).values())\n",
+    "        return min_cost\n",
+    "                \n",
+    "                \n",
+    "        \n",
+    "        \n",
+    "                \n",
+    "        \n",
+    "s = Solution()\n",
+    "s.minInsertions(\"dyyuyabzkqaybcspq\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 0 1\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "class Solution:\n",
+    "    def search(self, nums, target):\n",
+    "        n = len(nums)\n",
+    "        if n==1:\n",
+    "            return 0 if nums[0]==target else -1\n",
+    "        start = 0\n",
+    "        end = (n-1)\n",
+    "        pivot = 0\n",
+    "        flag = 0\n",
+    "        while (start<end):\n",
+    "            mid = (start+end)//2\n",
+    "            if (mid == 0) and nums[mid]>nums[mid+1]:\n",
+    "                pivot = mid\n",
+    "                if nums[pivot] == target:\n",
+    "                    return pivot\n",
+    "                start = 1\n",
+    "                end = (n-1)\n",
+    "                flag=1\n",
+    "                break\n",
+    "            if (mid == (n-1)) and nums[mid-1]>nums[mid]:\n",
+    "                pivot = mid\n",
+    "                if nums[pivot] == target:\n",
+    "                    return pivot\n",
+    "                start = 0\n",
+    "                end = (n-2)\n",
+    "                flag=1\n",
+    "                break\n",
+    "            if nums[mid] > nums[mid-1] and nums[mid] > nums[mid+1]:\n",
+    "                pivot = mid\n",
+    "                if (nums[mid] - nums[mid-1]) < (nums[mid+1] - nums[mid]):\n",
+    "                    if nums[0] >= target and nums[pivot] <= target:\n",
+    "                        start = 0\n",
+    "                        end = pivot\n",
+    "                    else:\n",
+    "                        start = pivot + 1\n",
+    "                        end = (n-1)\n",
+    "                else:\n",
+    "                    if nums[0] <= target and nums[pivot] >= target:\n",
+    "                        start = 0\n",
+    "                        end = pivot\n",
+    "                    else:\n",
+    "                        start = pivot + 1\n",
+    "                        end = (n-1)\n",
+    "                flag=1\n",
+    "                break\n",
+    "            if nums[start] <= nums[mid]:\n",
+    "                start = mid+1\n",
+    "            elif nums[mid+1] <= nums[end]:\n",
+    "                end = mid-1\n",
+    "        \n",
+    "        if flag==0:\n",
+    "            start = 0\n",
+    "            end = (n-1)\n",
+    "        match=-1\n",
+    "        while (start<=end):\n",
+    "            mid = (start+end)//2\n",
+    "            if (nums[mid] == target):\n",
+    "                match = mid\n",
+    "                break\n",
+    "            if nums[mid] < target:\n",
+    "                start = mid+1\n",
+    "            elif nums[mid] > target:\n",
+    "                end = mid-1\n",
+    "        return match\n",
+    "Solution().search([3,5,1], 3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[5]"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from heapq import *\n",
+    "from copy import deepcopy\n",
+    "class Twitter:\n",
+    "\n",
+    "    def __init__(self):\n",
+    "        \"\"\"\n",
+    "        Initialize your data structure here.\n",
+    "        \"\"\"\n",
+    "        self.followers = {}\n",
+    "        self.news_feed = {}\n",
+    "        self.tweet_count = 1\n",
+    "\n",
+    "    def postTweet(self, userId: int, tweetId: int) -> None:\n",
+    "        \"\"\"\n",
+    "        Compose a new tweet.\n",
+    "        \"\"\"\n",
+    "        if userId not in self.news_feed:\n",
+    "            self.news_feed[userId] = [(-self.tweet_count, tweetId, userId)]\n",
+    "            heapify(self.news_feed[userId])\n",
+    "        else:\n",
+    "            heappush(self.news_feed[userId], (-self.tweet_count, tweetId, userId))\n",
+    "        \n",
+    "        for follower in self.followers.get(userId, []):\n",
+    "            if follower not in self.news_feed:\n",
+    "                self.news_feed[follower] = [(-self.tweet_count, tweetId, userId)]\n",
+    "                heapify(self.news_feed[follower])\n",
+    "            else:\n",
+    "                heappush(self.news_feed[follower], (-self.tweet_count, tweetId, userId))\n",
+    "        self.tweet_count += 1\n",
+    "\n",
+    "    def getNewsFeed(self, userId: int):\n",
+    "        \"\"\"\n",
+    "        Retrieve the 10 most recent tweet ids in the user's news feed. Each item in the news feed must be posted by users who the user followed or by the user herself. Tweets must be ordered from most recent to least recent.\n",
+    "        \"\"\"\n",
+    "        feed = deepcopy(self.news_feed.get(userId, []))\n",
+    "        tweets = []\n",
+    "        for k in range(10):\n",
+    "            if len(feed)>0:\n",
+    "                tweet = heappop(feed)[1]\n",
+    "                tweets.append(tweet)\n",
+    "            else:\n",
+    "                return tweets\n",
+    "        return tweets\n",
+    "        \n",
+    "        \n",
+    "\n",
+    "    def follow(self, followerId: int, followeeId: int) -> None:\n",
+    "        \"\"\"\n",
+    "        Follower follows a followee. If the operation is invalid, it should be a no-op.\n",
+    "        \"\"\"\n",
+    "        if followeeId not in self.followers:\n",
+    "            self.followers[followeeId] = {followerId}\n",
+    "        else:\n",
+    "            self.followers[followeeId].add(followerId)\n",
+    "        if followerId == followeeId:\n",
+    "            return\n",
+    "        if followerId not in self.news_feed:\n",
+    "            feed = self.news_feed.get(followeeId, [])\n",
+    "            if feed:\n",
+    "                self.news_feed[followerId] = [elem for elem in feed if elem[-1]==followeeId]\n",
+    "            else:\n",
+    "                self.news_feed[followerId] = []\n",
+    "            heapify(self.news_feed[followerId])\n",
+    "        else:\n",
+    "            feed = self.news_feed.get(followeeId, [])\n",
+    "            if feed:\n",
+    "                new_tweets = [elem for elem in feed if elem[-1]==followeeId]\n",
+    "                for tweet in new_tweets:\n",
+    "                    heappush(self.news_feed[followerId], tweet)\n",
+    "\n",
+    "    def unfollow(self, followerId: int, followeeId: int) -> None:\n",
+    "        \"\"\"\n",
+    "        Follower unfollows a followee. If the operation is invalid, it should be a no-op.\n",
+    "        \"\"\"\n",
+    "        try:\n",
+    "            self.followers[followeeId].remove(followerId)\n",
+    "            if followeeId == followeeId:\n",
+    "                return\n",
+    "            self.news_feed[followerId] = [elem for elem in self.news_feed[followerId] if elem[-1]!=followeeId]\n",
+    "            heapify(self.news_feed[followerId])\n",
+    "        except Exception as e:\n",
+    "            pass\n",
+    "\n",
+    "\n",
+    "# Your Twitter object will be instantiated and called as such:\n",
+    "obj = Twitter()\n",
+    "obj.postTweet(1,5)\n",
+    "obj.follow(1,1)\n",
+    "obj.getNewsFeed(1)\n",
+    "# [\"Twitter\",\"postTweet\",\"follow\",\"getNewsFeed\"]\n",
+    "# [[],[1,5],[1,1],[1]]\n"
    ]
   },
   {
